# aufgabe_3-5

./: HR_functions.py  PÜ3_1_LoadingData.ipynb  PÜ3_2_Pandas.ipynb  README.md  analyze_data.ipynb  ekgdata.py  main.py  person.py  power_curve.py  pyproject.toml  read_data.py  read_pandas.py
